--- a/app/globals.css
+++ b/app/globals.css
@@ -67,3 +67,7 @@ body {
     --chart-5: 212 97% 87%;
   }
 }
+
+[data-dialog-overlay] {
+  background-color: rgba(255, 255, 255, 0.5) !important;
+}
