--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -70,4 +72,8 @@ body {
 
 [data-dialog-overlay] {
   background-color: rgba(255, 255, 255, 0.5) !important;
+}
+
+.cal-sans {
+  font-family: "Cal Sans", sans-serif;
 }
